--- a/app/assets/stylesheets/wages.scss
+++ b/app/assets/stylesheets/wages.scss
@@ -20,9 +20,8 @@
       margin-left: auto;
       margin-right: auto;
 
-      .mx-auto {
-        margin-left: auto;
-        margin-right: auto;
+      form {
+        width: 100%;
       }
     }
   }
