--- a/app/views/seasonal_inputs_usage_to_date/index.html.erb
+++ b/app/views/seasonal_inputs_usage_to_date/index.html.erb
@@ -1,10 +1,5 @@
-<div class="columns is-centered">
-  <div class="column is-6 has-background-white">
-    <%= column_chart User.all.map { |user| {name: user.username, data: user.created_at}} %>
-  </div>
-</div>
-<h1 class='has-background-white'>SeasonalInputsUsageToDate#index</h1>
-<table class="table">
+<h1 class='has-background-white has-text-centered'><strong>Seasonal Inputs Usage To Date</strong></h1>
+<table class="table-b-w-o">
   <tr>
     <th>Description</th>
     <th>Total Amount</th>
