Add pagination to cereal stores

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -768,6 +768,7 @@ body {
 @import url('./Purchases.scss');
 @import url('./rentals.scss');
 @import url('./wages.scss');
+@import url('./CerealStores.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
