--- a/app/views/cashflows/index.html.erb
+++ b/app/views/cashflows/index.html.erb
@@ -2,8 +2,8 @@
 <div class="cashflow-container">
   <div class="navigation">
     <div class="buttons">
-      <button class="cashflow-first-label">Create New Request</button>
-      <button class="cashflow-second-label">Cash Requests</button>
+      <button class="cashflow-first-label">Create New Cash Usage</button>
+      <button class="cashflow-second-label">Cash Usage</button>
     </div>
   </div>
 
