Add pagination to deliveries

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -769,6 +769,7 @@ body {
 @import url('./rentals.scss');
 @import url('./wages.scss');
 @import url('./CerealStores.scss');
+@import url('./deliveries.scss');
 
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
