--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="pagination">
-    <div class="columns is-centered deliveries-first-div">
+    <div class="columns deliveries-first-div">
       <div class="column is-6 mx-auto">
         <div class="card outerdiv">
           <div class="">
@@ -27,7 +27,7 @@
     <div class='box outerdiv deliveries-second-div'>
       <h1>Deliveries</h1>
 
-      <table class=" table has-background-white">
+      <table class="table has-background-white">
         <thead>
           <tr>
             <th>Company name</th>
