--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -263,6 +263,11 @@
   border-radius: 10px;
   box-shadow: 5px 10px rgb(233, 232, 232);
 
+  :not(:first-child):hover {
+    transform: scale(1, 1.4);
+    transition: transform 0.7s ease-in-out;
+  }
+
   tr {
     th {
       width: inherit;
@@ -368,6 +373,11 @@
   border: 1px solid rgb(133, 102, 102);
   border-radius: 10px;
   box-shadow: 5px 10px rgb(233, 232, 232);
+
+  :not(:first-child):hover {
+    transform: scale(1, 1.4);
+    transition: transform 0.7s ease-in-out;
+  }
 
   tr {
     th {
