--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -770,6 +770,7 @@ body {
 @import url('./wages.scss');
 @import url('./CerealStores.scss');
 @import url('./deliveries.scss');
+@import url('./harvesting.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
