Create pagination for Rationing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -771,6 +771,7 @@ body {
 @import url('./CerealStores.scss');
 @import url('./deliveries.scss');
 @import url('./harvesting.scss');
+@import url('./rationings.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
