Add store pagination

--- a/app/views/rationings/index.html.erb
+++ b/app/views/rationings/index.html.erb
@@ -2,8 +2,8 @@
 <div class="rationing-container">
   <div class="navigation">
     <div class="buttons">
-      <button class="rationing-first-label">Create New Entry for Harvesting</button>
-      <button class="rationing-second-label">Past Harvests</button>
+      <button class="rationing-first-label">New Rationing Entry</button>
+      <button class="rationing-second-label">Disbursed Rationings</button>
     </div>
   </div>
 
