--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -772,6 +772,7 @@ body {
 @import url('./deliveries.scss');
 @import url('./harvesting.scss');
 @import url('./rationings.scss');
+@import url('./stores.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
