--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,46 +1,73 @@
-<%= link_to 'New Store', new_store_path, class:"button btn-orange my-3" %>
-<div class="box outerdiv">
-  <p id="notice"><%= notice %></p>
-  <h1 class="has-text-centered"><strong>Stores</strong></h1>
+<p id="notice"><%= notice %></p>
+<div class="stores-container">
+  <div class="navigation">
+    <div class="buttons">
+      <button class="stores-first-label">Create New Store Entry</button>
+      <button class="stores-second-label">Store Entries</button>
+    </div>
+  </div>
 
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Company name</th>
-        <th>Date</th>
-        <th>Season</th>
-        <th>Farm name</th>
-        <th>Type</th>
-        <th>Input name</th>
-        <th>Quantity</th>
-        <th>Unit</th>
-        <th>Unit price</th>
-        <th>Total amount</th>
-        <th colspan="3" class="has-text-centered">Actions</th>
-      </tr>
-    </thead>
+  <div class="pagination">
+    <div class="columns is-centered stores-first-div">
+      <div class="column is-6 mx-auto">
+        <div class="card outerdiv">
+          <div class="">
+            <h1 class="has-text-centered"><strong>New Store</strong></h1>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <%= render 'form', store: @store %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <tbody>
-      <% @stores.each do |store| %>
-        <tr>
-          <td><%= store.company_name %></td>
-          <td><%= store.date %></td>
-          <td><%= store.season %></td>
-          <td><%= store.farm_name %></td>
-          <td><%= store.types %></td>
-          <td><%= store.input_name %></td>
-          <td>
-            <%# <%= store.quantity %>
-            <%= quantity(store.types, store.input_name) %>
-          </td>
-          <td><%= store.unit %></td>
-          <td><%= store.unit_price %></td>
-          <td><%= store.total_amount %></td>
-          <td><%= link_to 'Show', store %></td>
-          <td><%= link_to 'Top Up', edit_store_path(store) %></td>
-          <td><%= link_to 'Delete', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+    <div class="box outerdiv stores-second-div">
+      <p id="notice"><%= notice %></p>
+      <h1 class="has-text-centered"><strong>Stores</strong></h1>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Company name</th>
+            <th>Date</th>
+            <th>Season</th>
+            <th>Farm name</th>
+            <th>Type</th>
+            <th>Input name</th>
+            <th>Quantity</th>
+            <th>Unit</th>
+            <th>Unit price</th>
+            <th>Total amount</th>
+            <th colspan="3" class="has-text-centered">Actions</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @stores.each do |store| %>
+            <tr>
+              <td><%= store.company_name %></td>
+              <td><%= store.date %></td>
+              <td><%= store.season %></td>
+              <td><%= store.farm_name %></td>
+              <td><%= store.types %></td>
+              <td><%= store.input_name %></td>
+              <td>
+                <%# <%= store.quantity %>
+                <%= quantity(store.types, store.input_name) %>
+              </td>
+              <td><%= store.unit %></td>
+              <td><%= store.unit_price %></td>
+              <td><%= store.total_amount %></td>
+              <td><%= link_to 'Show', store %></td>
+              <td><%= link_to 'Top Up', edit_store_path(store) %></td>
+              <td><%= link_to 'Delete', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
+
