Create pagination for workshops

--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -1,38 +1,60 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Workshop', new_workshop_path, class:"button btn-orange my-3" %>
-<div class='box outerdiv'>
-<h1 class="has-text-centered"><strong>Workshops</strong></h1>
+<div class="workshops-container">
+  <div class="navigation">
+    <div class="buttons">
+      <button class="workshops-first-label">New Workshop Entry</button>
+      <button class="workshops-second-label">Workshops</button>
+    </div>
+  </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Farm name</th>
-      <th>Item</th>
-      <th>Quantity</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="pagination">
+    <div class="columns is-centered workshops-first-div">
+      <div class="column is-6 mx-auto">
+        <div class="card outerdiv">
+          <div class="">
+            <h1 class="has-text-centered"><strong>New Workshop</strong></h1>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <%= render 'form', workshop: @workshop %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <tbody>
-    <% @workshops.each do |workshop| %>
-      <tr>
-        <td><%= workshop.company_name %></td>
-        <td><%= workshop.date %></td>
-        <td><%= workshop.season %></td>
-        <td><%= workshop.farm_name %></td>
-        <td><%= workshop.item %></td>
-        <td><%= workshop.quantity %></td>
-        <td><%= link_to 'Show', workshop %></td>
-        <td><%= link_to 'Edit', edit_workshop_path(workshop) %></td>
-        <td><%= link_to 'Destroy', workshop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class='box outerdiv workshops-second-div'>
+      <h1 class="has-text-centered"><strong>Workshops</strong></h1>
 
-<br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Company name</th>
+            <th>Date</th>
+            <th>Season</th>
+            <th>Farm name</th>
+            <th>Item</th>
+            <th>Quantity</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @workshops.each do |workshop| %>
+            <tr>
+              <td><%= workshop.company_name %></td>
+              <td><%= workshop.date %></td>
+              <td><%= workshop.season %></td>
+              <td><%= workshop.farm_name %></td>
+              <td><%= workshop.item %></td>
+              <td><%= workshop.quantity %></td>
+              <td><%= link_to 'Show', workshop %></td>
+              <td><%= link_to 'Edit', edit_workshop_path(workshop) %></td>
+              <td><%= link_to 'Destroy', workshop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
-
