--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -773,6 +773,7 @@ body {
 @import url('./harvesting.scss');
 @import url('./rationings.scss');
 @import url('./stores.scss');
+@import url('./workshop.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
