Create pagination for input_calibrations

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -774,6 +774,7 @@ body {
 @import url('./rationings.scss');
 @import url('./stores.scss');
 @import url('./workshop.scss');
+@import url('./calibrations.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
