--- a/app/views/input_calibrations/index.html.erb
+++ b/app/views/input_calibrations/index.html.erb
@@ -1,50 +1,73 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Input Calibration', new_input_calibration_path, class:"button btn-orange my-3" %>
-<div class='box outerdiv'>
-<h1 class="has-text-centered"><strong>Input Calibrations</strong></h1>
+<div class="calibrations-container">
+  <div class="navigation">
+    <div class="buttons">
+      <button class="calibrations-first-label">New Calibration Entry</button>
+      <button class="calibrations-second-label">Calibrations</button>
+    </div>
+  </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Farm name</th>
-      <th>Section</th>
-      <th>Crop</th>
-      <th>Variety</th>
-      <th>Fertiliser Type</th>
-      <th>Fertiliser Rate</th>
-      <th>Bags used</th>
-      <th>Herbicide</th>
-      <th>Herbicide rate</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="pagination">
+    <div class="columns is-centered calibrations-first-div">
+      <div class="column is-6 mx-auto">
+        <div class="card outerdiv">
+          <div class="">
+            <h1 class='has-text-centered'><strong>New Input Calibration</strong></h1>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <%= render 'form', input_calibration: @input_calibration %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <tbody>
-    <% @input_calibrations.each do |input_calibration| %>
-      <tr>
-        <td><%= input_calibration.company_name %></td>
-        <td><%= input_calibration.date %></td>
-        <td><%= input_calibration.season %></td>
-        <td><%= input_calibration.farm_name %></td>
-        <td><%= input_calibration.section %></td>
-        <td><%= input_calibration.crop %></td>
-        <td><%= input_calibration.variety %></td>
-        <td><%= input_calibration.fertiliser_type %></td>
-        <td><%= input_calibration.fertiliser_rate %></td>
-        <td><%= input_calibration.bags_used %></td>
-        <td><%= input_calibration.herbicide %></td>
-        <td><%= input_calibration.herbicide_rate %></td>
-        <td><%= link_to 'Show', input_calibration %></td>
-        <td><%= link_to 'Edit', edit_input_calibration_path(input_calibration) %></td>
-        <td><%= link_to 'Destroy', input_calibration, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class='box outerdiv calibrations-second-div'>
+      <h1 class="has-text-centered"><strong>Input Calibrations</strong></h1>
 
-<br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Company name</th>
+            <th>Date</th>
+            <th>Season</th>
+            <th>Farm name</th>
+            <th>Section</th>
+            <th>Crop</th>
+            <th>Variety</th>
+            <th>Fertiliser Type</th>
+            <th>Fertiliser Rate</th>
+            <th>Bags used</th>
+            <th>Herbicide</th>
+            <th>Herbicide rate</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @input_calibrations.each do |input_calibration| %>
+            <tr>
+              <td><%= input_calibration.company_name %></td>
+              <td><%= input_calibration.date %></td>
+              <td><%= input_calibration.season %></td>
+              <td><%= input_calibration.farm_name %></td>
+              <td><%= input_calibration.section %></td>
+              <td><%= input_calibration.crop %></td>
+              <td><%= input_calibration.variety %></td>
+              <td><%= input_calibration.fertiliser_type %></td>
+              <td><%= input_calibration.fertiliser_rate %></td>
+              <td><%= input_calibration.bags_used %></td>
+              <td><%= input_calibration.herbicide %></td>
+              <td><%= input_calibration.herbicide_rate %></td>
+              <td><%= link_to 'Show', input_calibration %></td>
+              <td><%= link_to 'Edit', edit_input_calibration_path(input_calibration) %></td>
+              <td><%= link_to 'Destroy', input_calibration, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 
