Create pagination for land names and iirgation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -775,6 +775,8 @@ body {
 @import url('./stores.scss');
 @import url('./workshop.scss');
 @import url('./calibrations.scss');
+@import url('./irrigation.scss');
+@import url('./lands.scss');
 
 .input[type="text"] {
   border-bottom: 1px solid red;
