--- a/app/views/land_names/index.html.erb
+++ b/app/views/land_names/index.html.erb
@@ -1,40 +1,64 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Land Name', new_land_name_path, class:"button btn-orange my-3" %>
-<div class='box outerdiv'>
-<h1 class="has-text-centered"><strong>Land Names</strong></h1>
+<div class="lands-container">
+  <div class="navigation">
+    <div class="buttons">
+      <button class="lands-first-label">New Land Name</button>
+      <button class="lands-second-label">Land Sections</button>
+    </div>
+  </div>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Farm name</th>
-      <th>Hectrage</th>
-      <th>Crop</th>
-      <th>Section</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="pagination">
+    <div class="columns is-centered lands-first-div">
+      <div class="column is-6 mx-auto">
+        <div class="card outerdiv">
+          <div class="">
+            <h1 class="has-text-centered"><strong>New Land Name</strong></h1>
+          </div>
+          <div class="card-content">
+            <div class="content">
+              <%= render 'form', land_name: @land_name %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <tbody>
-    <% @land_names.each do |land_name| %>
-      <tr>
-        <td><%= land_name.company_name %></td>
-        <td><%= land_name.date %></td>
-        <td><%= land_name.season %></td>
-        <td><%= land_name.farm_name %></td>
-        <td><%= land_name.hectrage %></td>
-        <td><%= land_name.crop %></td>
-        <td><%= land_name.section %></td>
-        <td><%= link_to 'Show', land_name %></td>
-        <td><%= link_to 'Edit', edit_land_name_path(land_name) %></td>
-        <td><%= link_to 'Destroy', land_name, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class='box outerdiv lands-second-div'>
+      <h1 class="has-text-centered"><strong>Land Names</strong></h1>
 
-<br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Company name</th>
+            <th>Date</th>
+            <th>Season</th>
+            <th>Farm name</th>
+            <th>Hectrage</th>
+            <th>Crop</th>
+            <th>Section</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @land_names.each do |land_name| %>
+            <tr>
+              <td><%= land_name.company_name %></td>
+              <td><%= land_name.date %></td>
+              <td><%= land_name.season %></td>
+              <td><%= land_name.farm_name %></td>
+              <td><%= land_name.hectrage %></td>
+              <td><%= land_name.crop %></td>
+              <td><%= land_name.section %></td>
+              <td><%= link_to 'Show', land_name %></td>
+              <td><%= link_to 'Edit', edit_land_name_path(land_name) %></td>
+              <td><%= link_to 'Destroy', land_name, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
+
 
